# clinical-triage-env

./: Dockerfile  README.md  app.py  environment.py  inference.py  openenv.yaml  patients.py  pyproject.toml  requirements.txt
clinical_triage/: environment.py  models.py
server/: app.py
