[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"

[project]
name = "clinical-triage-env"
version = "1.1.0"
description = "OpenEnv-compatible ICU triage environment."
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.0",
    "openai==1.30.0",
    "requests==2.31.0",
]

[tool.setuptools]
py-modules = ["app", "environment", "models", "patients"]